# tvision_set_soft_tests

./: CMakeLists.txt
.cmake/: common.cmake
.config/: doxygen_common.cfg  sort.txt
_libs/: .gitignore  _clone_libs.bat
src/tv_test/: example.cpp  example.h
